# nba

./: .gitignore  CLAUDE.md  README.md  betting.py  main.py  polymarket.py  pyproject.toml  requirements.txt  suggestion.txt
bets/: README.md  active.json  bankroll.json  history.json
helpers/: api.py  games.py  matchup.py  teams.py  types.py
output/: atlanta_hawks_vs_minnesota_timberwolves_2026-02-10.json  charlotte_hornets_vs_atlanta_hawks_2026-02-08.json  chicago_bulls_vs_brooklyn_nets_2026-02-10.json  cleveland_cavaliers_vs_denver_nuggets_2026-02-10.json  cleveland_cavaliers_vs_sacramento_kings_2026-02-08.json  dallas_mavericks_vs_los_angeles_lakers_2026-02-12.json  dallas_mavericks_vs_san_antonio_spurs_2026-02-07.json  denver_nuggets_vs_chicago_bulls_2026-02-08.json  detroit_pistons_vs_charlotte_hornets_2026-02-10.json  golden_state_warriors_vs_los_angeles_lakers_2026-02-08.json  houston_rockets_vs_oklahoma_city_thunder_2026-02-07.json  indiana_pacers_vs_milwaukee_bucks_2026-02-07.json  indiana_pacers_vs_toronto_raptors_2026-02-08.json  la_clippers_vs_minnesota_timberwolves_2026-02-08.json  la_clippers_vs_sacramento_kings_2026-02-07.json  matchup_analysis.json  memphis_grizzlies_vs_golden_state_warriors_2026-02-10.json  memphis_grizzlies_vs_portland_trail_blazers_2026-02-07.json  memphis_grizzlies_vs_portland_trail_blazers_2026-02-08.json  miami_heat_vs_boston_celtics_2026-02-07.json  miami_heat_vs_washington_wizards_2026-02-08.json  milwaukee_bucks_vs_oklahoma_city_thunder_2026-02-12.json  milwaukee_bucks_vs_orlando_magic_2026-02-10.json  (+11 more)
tests/: test_analyze.py  (+8 more)
(+43 files in other folders)
