[project]
name = "nba-analytics"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["aiohttp>=3.8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.20"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
